pos change pop-up overlapping issue fixed 2 --save

--- a/src/components/Common/card-skeleton-loader/cardskeleton.scss
+++ b/src/components/Common/card-skeleton-loader/cardskeleton.scss
@@ -31,7 +31,6 @@
   background-size: 800px 104px;
   height: 104px;
   position: relative;
-  z-index: -1;
 }
 
 .lightui1-shimmer div {
@@ -60,7 +59,6 @@
   background-size: 800px 104px;
   height: 104px;
   position: relative;
-  z-index: -1;
 }
 
 .lightui1b-shimmer div {
